--- a/pub/index.html
+++ b/pub/index.html
@@ -5,23 +5,44 @@
     <meta name="description" content="PWA demo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PWA Demo</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <!-- PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="manifest" href="/icons/site.webmanifest">
+    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#535c68">
+    <link rel="shortcut icon" href="/icons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="PWA info">
+    <meta name="application-name" content="PWA info">
+    <meta name="msapplication-TileColor" content="#535c68">
+    <meta name="msapplication-config" content="/icons/browserconfig.xml">
+    <meta name="theme-color" content="#dff9fb">
 
-    <h1>Test service worker</h1>
+    <!-- Styles -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/build/fonts.css">
+    <link rel="stylesheet" type="text/css" href="/build/main.css">
+    <script src="/build/fontawesome-all.min.js"></script>
 
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                }, function(err) {
-                    console.log('ServiceWorker registration failed: ', err);
+    </head>
+    <body>
+        <div id="root">
+        </div>
+        <script src="/build/project.bundle.js" charset="utf-8"></script>
+        <!--
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', function() {
+                    navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
+                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    }, function(err) {
+                        console.log('ServiceWorker registration failed: ', err);
+                    });
                 });
-            });
-        }
-    </script>
+            }
+        </script>
+        -->
   </body>
 </html>
