Reactivate service worker

--- a/pub/index.html
+++ b/pub/index.html
@@ -31,11 +31,10 @@
         <div id="root">
         </div>
         <script src="/build/project.bundle.js" charset="utf-8"></script>
-        <!--
         <script>
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
+                    navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
                         console.log('ServiceWorker registration successful with scope: ', registration.scope);
                     }, function(err) {
                         console.log('ServiceWorker registration failed: ', err);
@@ -43,6 +42,5 @@
                 });
             }
         </script>
-        -->
   </body>
 </html>
