--- a/pub/index.html
+++ b/pub/index.html
@@ -32,15 +32,13 @@
         </div>
         <script src="/build/project.bundle.js" charset="utf-8"></script>
         <script>
+            // Check that service workers are registered
             if ('serviceWorker' in navigator) {
-                window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    }, function(err) {
-                        console.log('ServiceWorker registration failed: ', err);
-                    });
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/sw.js');
                 });
             }
         </script>
-  </body>
+    </body>
 </html>
