Fix workbox not finding local files

--- a/pub/index.html
+++ b/pub/index.html
@@ -21,14 +21,13 @@
     <!-- Styles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/build/fonts.css">
-    <link rel="stylesheet" type="text/css" href="/build/main.css">
-    <script src="/build/fontawesome-all.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/main.css">
 
     </head>
     <body>
         <div id="root">
         </div>
-        <script src="/build/project.bundle.js" charset="utf-8"></script>
+        <script src="/project.bundle.js" charset="utf-8"></script>
         <script>
             // Check that service workers are registered
             if ('serviceWorker' in navigator) {
