Improve some audit stuff

--- a/pub/index.html
+++ b/pub/index.html
@@ -20,12 +20,12 @@
 
     <!-- Styles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/build/fonts.css">
     <link rel="stylesheet" type="text/css" href="/main.css">
 
     </head>
     <body>
         <div id="root">
+            <span>This demo requires javascript and a modern web browser.</span>
         </div>
         <script src="/project.bundle.js" charset="utf-8"></script>
         <script>
